storage/ndb/src/kernel/vm/mt.hpp
@@ -56,4 +56,16 @@ SendStatus mt_send_remote(Uint32 self, const SignalHeader *sh, Uint8 prio,
 void mt_section_lock();
 void mt_section_unlock();
 
+/**
+ * Get list of BlockReferences so that
+ *   each thread holding an instance of any block in blocks[] get "covered"
+ *   (excluding ownThreadId
+ *
+ * eg. calling it with DBLQH, will return a block-reference to *a* block
+ *     in each of the threads that has an DBLQH instance
+ */
+Uint32 mt_get_thread_references_for_blocks(const Uint32 blocks[],
+                                           Uint32 ownThreadId,
+                                           Uint32 dst[], Uint32 len);
+
 #endif
